update rabbitMQEmail